# BillSplitterMDS

./: .gitignore  CONDUCT.md  CONTRIBUTING.md  README.md  _quarto.yml  environment.yml  index.qmd  objects.json  pyproject.toml  reflection.qmd  ruff.toml
.github/workflows/: build.yml  ci-cd.yml  deploy.yml  quarto-gh-pages.yml
_site/: CONDUCT.html  CONTRIBUTING.html  search.json
_site/reference/: amount_to_transfer.html  index.html  individual_total_payments.html  load_validate_data.html  split_by_item.html
reference/: _sidebar.yml  amount_to_transfer.qmd  index.qmd  individual_total_payments.qmd  load_validate_data.qmd  split_by_item.qmd
src/billsplittermds/: __init__.py  amount_to_transfer.py  individual_total_payments.py  load_validate_data.py  split_by_item.py
tests/: __init__.py  test_amount_to_transfer.py  test_individual_total_payments.py  test_split_by_item.py
